<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_x_api_trading_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...

    <Button
        android:textSize="14sp"
        android:text="@string/button_setStartDate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPickStartDate"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"/>

    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:text="@string/button_SetEndDate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPickEndDate" />

    <Button
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/show_symbols"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonSetSymbol" />

    <Button
        android:layout_gravity="center"
        android:textSize="14sp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:text="@string/get_data_from_xAapi"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonHistData" />

    <Button
        android:layout_gravity="right"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:text="Draw Chart"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/drawCandleChart" />

</LinearLayout>

