<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_live"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hortensie.ai_trader.MainApiActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:id="@+id/main_live_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_view"
        android:elevation="5dp"/>

    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/button_period_selector"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPeriodSelector" />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="left"
        android:id="@+id/main_other_functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_functions"
        android:elevation="5dp"/>

    <Button
        android:layout_gravity="left"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:text="@string/load_symbols_db"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonGetSymbolsApi" />

    <Button
        android:layout_gravity="left"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:text="@string/get_symbols_from_api"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonGetSymbols" />

</LinearLayout>
